--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Welcome to Ziyue Zhao's homepage!
-description: I briefly introduce my publications and projects here.
+title: Ziyue Zhao
+description: PhD Student 
