--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Ziyue Zhao
-logo: /image/img/Portrait.jpg
+logo: image/img/Portrait.jpg
 description: PhD Student 
