--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Ziyue Zhao
-logo: <img src="/image/Portrait.jpg" width="200">
+<img src="/image/Portrait.jpg" width="120" alt="Logo" />
 description: PhD Student 
