--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Ziyue Zhao
-<img src="/image/Portrait.jpg" width="120" alt="Logo" />
+logo:  /image/Portrait_120x150.jpg
 description: PhD Student 
